--- a/src/main/resources/de/thomasvolk/genexample/report/templates/report/algorithm/generation.html
+++ b/src/main/resources/de/thomasvolk/genexample/report/templates/report/algorithm/generation.html
@@ -13,11 +13,11 @@
   <script>
       wagon.zeichnen('wagon_$i', 0, 0, data.wagon_$i);
   </script>
-  Zufriedenheit: <%=w.zufriedenheit %>
-  <a href="belegung_${ctx.generation.name}_${i}.html">Belegung</a>
+  satisfaction: <%=w.zufriedenheit %>
+  <a href="belegung_${ctx.generation.name}_${i}.html">allocation</a>
 
   <p>
-      Genom: <%=w.sitzplatzVergabeListe.collect { sv -> sv.passagier.id }.join('-') %>
+      genome: <%=w.sitzplatzVergabeListe.collect { sv -> sv.passagier.id }.join('-') %>
   </p>
   <% } %>
   </body>
