--- a/src/main/resources/de/thomasvolk/genexample/report/templates/report/algorithm/index.html
+++ b/src/main/resources/de/thomasvolk/genexample/report/templates/report/algorithm/index.html
@@ -14,15 +14,15 @@
     <script>
       wagon.zeichnen('startWagon', 0, 0, data.startWagon);
   </script>
-    Zufriedenheit: <%=ctx.startWagonBelegung.zufriedenheit %> (maximal: <%=ctx.startWagonBelegung.maximaleZufriedenheit %>)
-    <h2>Ende</h2>
+    satisfaction: <%=ctx.startWagonBelegung.zufriedenheit %> (maximal: <%=ctx.startWagonBelegung.maximaleZufriedenheit %>)
+    <h2>Stop</h2>
     <canvas id="besterWagon" width="2000" height="200"></canvas>
     <script>
       wagon.zeichnen('besterWagon', 0, 0, data.besterWagon);
   </script>
-    Zufriedenheit: <%=ctx.generation.besteWagonBelegung.zufriedenheit %>
-    <a href="allocation.html">Belegung</a>
-    <h2>Generationen</h2>
+    satisfaction: <%=ctx.generation.besteWagonBelegung.zufriedenheit %>
+    <a href="allocation.html">Allocation</a>
+    <h2>Generations</h2>
     <ul>
     <% ctx.generationen.each { g -> %>
     <li><a href="generation_${g.name}.html">Generation $g.nummer</a></li>
