--- a/src/main/resources/de/thomasvolk/genexample/report/templates/report/index.html
+++ b/src/main/resources/de/thomasvolk/genexample/report/templates/report/index.html
@@ -7,8 +7,8 @@
     <script src="${templateName}.js"></script>
 </head>
 <body>
-<h1>Genetische Algorithmen</h1>
-<h2>Algorithmen</h2>
+<h1>Genetic Algorithm</h1>
+<h2>Algorithm</h2>
 <ul>
     <% ctx.algorithmusTypen.each { alg -> %>
     <li><a href="$alg/index.html">$alg</a></li>
@@ -19,23 +19,23 @@
 <script>
       wagon.zeichnen('startWagon', 0, 0, data.startWagon, "plain");
 </script>
-<h2>Passagiere</h2>
+<h2>Passengers</h2>
 <table>
     <thead>
     <tr>
         <td>id</td>
-        <td>Fahrtrichtung</td>
-        <td>Fenster</td>
-        <td>Abteil</td>
+        <td>driving direction</td>
+        <td>window</td>
+        <td>cabin</td>
     </tr>
     </thead>
     <tbody>
     <% ctx.startWagonBelegung.sitzplatzVergabeListe.each { spv -> %>
     <tr>
         <td>$spv.passagier.id</td>
-        <td>$spv.passagier.wertung.fahrtRichtung</td>
-        <td>$spv.passagier.wertung.fensterPlatz</td>
-        <td>$spv.passagier.wertung.abteil</td>
+        <td>$spv.passagier.request.fahrtRichtung</td>
+        <td>$spv.passagier.request.fensterPlatz</td>
+        <td>$spv.passagier.request.abteil</td>
     </tr>
     <% } %>
     </tbody>
