--- a/src/main/resources/de/thomasvolk/genexample/report/templates/report/algorithm/generation.html
+++ b/src/main/resources/de/thomasvolk/genexample/report/templates/report/algorithm/generation.html
@@ -13,7 +13,7 @@
   <script>
       wagon.zeichnen('wagon_$i', 0, 0, data.wagon_$i);
   </script>
-  satisfaction: <%=w.zufriedenheit %>
+  happiness: <%=w.happiness %>
   <a href="belegung_${ctx.generation.name}_${i}.html">allocation</a>
 
   <p>
