--- a/src/main/resources/de/thomasvolk/genexample/report/templates/report/index.html
+++ b/src/main/resources/de/thomasvolk/genexample/report/templates/report/index.html
@@ -30,7 +30,7 @@
     </tr>
     </thead>
     <tbody>
-    <% ctx.startWagonBelegung.sitzplatzVergabeListe.each { spv -> %>
+    <% ctx.startWagonAllocation.sitzplatzVergabeListe.each { spv -> %>
     <tr>
         <td>$spv.passagier.id</td>
         <td>$spv.passagier.request.fahrtRichtung</td>
