--- a/src/main/resources/de/thomasvolk/genexample/report/templates/report/index.html
+++ b/src/main/resources/de/thomasvolk/genexample/report/templates/report/index.html
@@ -35,7 +35,7 @@
         <td>$spv.passagier.id</td>
         <td>$spv.passagier.request.fahrtRichtung</td>
         <td>$spv.passagier.request.fensterPlatz</td>
-        <td>$spv.passagier.request.abteil</td>
+        <td>$spv.passagier.request.cabin</td>
     </tr>
     <% } %>
     </tbody>
