--- a/src/main/resources/de/thomasvolk/genexample/report/templates/report/index.html
+++ b/src/main/resources/de/thomasvolk/genexample/report/templates/report/index.html
@@ -33,8 +33,8 @@
     <% ctx.startWagonAllocation.sitzplatzVergabeListe.each { spv -> %>
     <tr>
         <td>$spv.passagier.id</td>
-        <td>$spv.passagier.request.fahrtRichtung</td>
-        <td>$spv.passagier.request.fensterPlatz</td>
+        <td>$spv.passagier.request.drivingDirection</td>
+        <td>$spv.passagier.request.windowSeat</td>
         <td>$spv.passagier.request.cabin</td>
     </tr>
     <% } %>
